🩹 fix scroll issue on ios on empty page

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,7 +4,7 @@
 
 html {
   min-height: calc(100% + env(safe-area-inset-top));
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom, 20px) env(safe-area-inset-left);
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
 }
 
 .custom-scrollbar {
